[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "markdown-crawler"
version = "0.0.5"
authors = [
  { name="Paul Pierre", email="hi@paulpierre.com" },
]
description = "A multithreaded 🕸️ web crawler that recursively crawls a website and creates a 🔽 markdown file for each page"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4>=4.10.0",
    "markdownify>=0.14.1",
    "requests>=2.25.1",
]

[project.urls]
"Homepage" = "https://github.com/paulpierre/markdown-crawler"
"Bug Tracker" = "https://github.com/paulpierre/markdown-crawler/issues"
"Twitter" = "https://twitter.com/paulpierre"

[project.scripts]
markdown-crawler = "markdown_crawler.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
